--- a/css/global.css
+++ b/css/global.css
@@ -1,11 +1,4 @@
-nav {
-  width: 100vw;
-  height: 80px;
-  background-color: black;
-  color: white;
-}
-
-main {
-  width: 100vw;
-  height: calc(100vh - 80px);
+body {
+  margin: 0;
+  font-family: "Snell Roundhand", Arial, sans-serif;
 }
