--- a/css/index.css
+++ b/css/index.css
@@ -10,10 +10,10 @@ Ivory: #fffff0
 Pale Blue: #a9cce3 */
 
 body {
-    margin: 0;
-    font-family: "Snell Roundhand", Arial, sans-serif;
-  }
-  
+  margin: 0;
+  font-family: "Snell Roundhand", Arial, sans-serif;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -21,18 +21,18 @@ body {
   align-items: center;
   justify-items: center;
   flex-wrap: wrap;
-  background-color: #ecd7d0;
+  background-color: ivory;
   width: 100vw;
-  
 }
 .nav__left {
-  color: #890025;
+  color: silver;
   margin: 0px 40px;
 }
 .nav__logo a {
-  color: #890025;
+  color: silver;
   text-decoration: none;
 }
+
 .nav__right ul {
   display: flex;
   flex-wrap: wrap;
@@ -42,21 +42,69 @@ body {
 }
 .nav__right li {
   margin-right: 15px;
-  color: #890025;
+  color: silver;
 }
 
 .nav__right a {
   text-decoration: none;
-  color: #890025;
+  color: silver;
 }
 .nav__link--active {
-  text-decoration: underline #890025;
+  text-decoration: underline silver;
+}
+
+/* main */
+
+.main-background {
+  display: block;
+  width: 100vw;
+  height: auto;
+  border-radius: 5px 5px 0 0;
+  margin: 0 auto;
+  position: relative;
+  background-color: silver;
+}
+
+.container {
+  position: relative;
+  z-index: 1;
+}
+
+.container__content {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 10rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: white;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  display: block;
+}
+
+.container__header {
+  color: white; /* Set text color */
+  font-weight: 600;
+  font-size: 40px;
+  /* background-color: ivory; */
+}
+.container__date {
+  color: white; /* Set text color */
+  font-weight: 600;
+  font-size: 24px;
+  text-decoration: underline;
+  text-align: center;
+  /* background-color: ivory; */
 }
 
 /* footer */
 
 .footer {
-  background-color: #fffff0;
+  background-color: ivory;
   padding: 20px 0;
   text-align: center;
 }
@@ -75,15 +123,15 @@ body {
 
 .contact-info h3 {
   margin-bottom: 10px;
-  color: #890025;
+  color: silver;
 }
 
 .contact-info p a {
   margin: 5px 0;
-  color: #890025;
+  color: silver;
 }
 
 .contact-info p {
   margin: 5px 0;
-  color: #890025;
+  color: silver;
 }
