--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,8 @@ Ivory: #fffff0
 Pale Blue: #a9cce3 */
 
 body {
+  overflow-x: hidden;
+  width: 100vw;
   margin: 0;
   font-family: "Snell Roundhand", Arial, sans-serif;
 }
@@ -22,15 +24,17 @@ body {
   justify-items: center;
   flex-wrap: wrap;
   background-color: ivory;
-  width: 100vw;
+  /* width: 100vw; */
 }
 .nav__left {
   color: silver;
   margin: 0px 40px;
 }
-.nav__logo a {
+.flower__logo {
   color: silver;
   text-decoration: none;
+  height: 40px;
+  width: auto;
 }
 
 .nav__right ul {
@@ -111,12 +115,22 @@ body {
 
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
+.footer__header {
+  color: silver;
+}
+
+.container-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 .contact-info {
   margin-bottom: 20px;
 }
