--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,10 @@
+body {
+  overflow-x: hidden;
+  width: 100vw;
+  margin: 0;
+  font-family: "Snell Roundhand", Arial, sans-serif;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -9,11 +16,11 @@
   width: 100vw;
 }
 .nav__left {
-  color: silver;
+  color: black;
   margin: 0px 40px;
 }
 .flower__logo {
-  color: silver;
+  color: black;
   text-decoration: none;
   height: 40px;
   width: auto;
@@ -28,22 +35,23 @@
 }
 .nav__right li {
   margin-right: 15px;
-  color: silver;
+  color: black;
 }
 
 .nav__right a {
   text-decoration: none;
-  color: silver;
+  color: black;
 }
 .nav__link--active {
-  text-decoration: underline silver;
+  text-decoration: underline black;
 }
 
 .photo-gallery {
   width: 100vw;
   box-sizing: border-box;
-  background-color: #fafafa;
+  background-color: ivory;
   /* padding: 24px 16px; */
+  padding-bottom: 15px;
 }
 
 .photo-gallery__images .photo-gallery__title {
@@ -51,7 +59,58 @@
   flex-wrap: wrap;
   font-size: 24px;
 }
+
+.photo-gallery__title {
+  text-align: center;
+  margin-top: 0px;
+  padding-top: 10px;
+}
+
 .photo-gallery__images img {
   flex-basis: 33.33%;
   width: 33%;
+}
+
+.footer {
+  background-color: ivory;
+  padding: 20px 0;
+  text-align: center;
+  border-top: 2px solid silver;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.footer__header {
+  color: silver;
+}
+
+.container-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.contact-info {
+  margin-bottom: 20px;
+}
+
+.contact-info h3 {
+  margin-bottom: 10px;
+  color: silver;
+}
+
+.contact-info p a {
+  margin: 5px 0;
+  color: silver;
+}
+
+.contact-info p {
+  margin: 5px 0;
+  color: silver;
 }
