--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,9 @@ Ivory: #fffff0
 Pale Blue: #a9cce3 */
 
 body {
-  overflow-x: hidden;
+  /* overflow-y: hidden; */
   width: 100vw;
+  /* max-height: 100vh; */
   margin: 0;
   font-family: "Snell Roundhand", Arial, sans-serif;
 }
@@ -24,17 +25,19 @@ body {
   justify-items: center;
   flex-wrap: wrap;
   background-color: ivory;
-  /* width: 100vw; */
+  height: 60px;
 }
 .nav__left {
-  color: silver;
+  color: black;
   margin: 0px 40px;
 }
 .flower__logo {
-  color: silver;
+  color: black;
   text-decoration: none;
   height: 40px;
   width: auto;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .nav__right ul {
@@ -46,27 +49,28 @@ body {
 }
 .nav__right li {
   margin-right: 15px;
-  color: silver;
+  color: black;
 }
 
 .nav__right a {
   text-decoration: none;
-  color: silver;
+  color: black;
 }
 .nav__link--active {
-  text-decoration: underline silver;
+  text-decoration: underline black;
 }
 
 /* main */
 
 .main-background {
   display: block;
-  width: 100vw;
-  height: auto;
-  border-radius: 5px 5px 0 0;
   margin: 0 auto;
   position: relative;
   background-color: silver;
+  width: 100%;
+  height: calc(100vh - 90px);
+  object-fit: cover;
+  object-position: center 92%;
 }
 
 .container {
@@ -105,6 +109,50 @@ body {
   /* background-color: ivory; */
 }
 
+.scrolling-text__container {
+  width: 100vw;
+  margin: 1em auto;
+  overflow: hidden;
+  position: relative;
+  height: 30px;
+  margin: 0;
+  align-items: center;
+}
+
+.scrolling-text {
+  white-space: nowrap;
+  position: absolute;
+  text-transform: uppercase;
+  margin: auto 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.scrolling-text {
+  -webkit-animation: mymove 8s linear infinite; /* Safari 4.0 - 8.0 */
+  white-space: nowrap;
+  animation: mymove 8s linear infinite;
+}
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes mymove {
+  from {
+    left: 0;
+  }
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes mymove {
+  from {
+    left: 0;
+  }
+  to {
+    left: -140px;
+  }
+}
+
 /* footer */
 
 .footer {
@@ -119,7 +167,7 @@ body {
   justify-content: space-around;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 10px;
 }
 
 .footer__header {
