--- a/css/location.css
+++ b/css/location.css
@@ -62,6 +62,7 @@ body {
 .card-container {
   display: flex;
 }
+
 .location-card__background {
   display: block;
   width: 500px;
@@ -69,13 +70,10 @@ body {
   border-radius: 5px 5px 0 0;
 }
 
-.location-card__label {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 10px;
-  color: #ffffff;
+.card {
+  position: relative;
 }
+
 .card a {
   position: absolute;
   top: 0;
@@ -83,4 +81,53 @@ body {
   bottom: 0;
   left: 0;
   z-index: 1;
+}
+
+.card figure {
+  margin: 0;
+}
+
+/* footer */
+
+.footer {
+  background-color: ivory;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 0 10px;
+}
+
+.footer__header {
+  color: silver;
+}
+
+.container-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.contact-info {
+  margin-bottom: 20px;
+}
+
+.contact-info h3 {
+  margin-bottom: 10px;
+  color: silver;
+}
+
+.contact-info p a {
+  margin: 5px 0;
+  color: silver;
+}
+
+.contact-info p {
+  margin: 5px 0;
+  color: silver;
 }
