--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,105 @@
+/* colour palette */
+/* Dusty Rose: #d2a5a3
+Soft Peach: #fbd2b7
+Mauve: #b598a3
+Champagne: #f5e1c0
+Lavender: #c3aed6
+Sage Green: #b8c9a5
+Gold: #ffd700
+Ivory: #fffff0
+Pale Blue: #a9cce3 */
+
 body {
-  max-width: 100vw;
+  width: 100vw;
   margin: 0;
   font-family: "Snell Roundhand", Arial, sans-serif;
+  background-color: ivory;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  justify-items: center;
+  flex-wrap: wrap;
+  background-color: ivory;
+  height: 60px;
+}
+.nav__left {
+  color: black;
+  margin: 0px 40px;
+}
+.flower__logo {
+  color: black;
+  text-decoration: none;
+  height: 40px;
+  width: auto;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.nav__right ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0px 40px;
+}
+.nav__right li {
+  margin-right: 15px;
+  color: black;
+}
+
+.nav__right a {
+  text-decoration: none;
+  color: black;
+}
+.nav__link--active {
+  text-decoration: underline black;
+}
+
+/* footer */
+
+.footer {
+  background-color: ivory;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 0 10px;
+}
+
+.footer__header {
+  color: silver;
+}
+
+.container-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.contact-info {
+  margin-bottom: 20px;
+}
+
+.contact-info h3 {
+  margin-bottom: 10px;
+  color: silver;
+}
+
+.contact-info p a {
+  margin: 5px 0;
+  color: silver;
+}
+
+.contact-info p {
+  margin: 5px 0;
+  color: silver;
 }
